--- a/index.html
+++ b/index.html
@@ -286,6 +286,20 @@
         </div>
         <img src="bilder/script-in-html.png" alt="Script innerhalb HTML" class="alle-img"/>
 
+        <div class="objekte-methoden">
+            <h3>Objekte & Methoden verwenden</h3>
+            <p><b>Beispiel</b></p>
+
+        </div>
+        <img src="bilder/document.write.png" alt="Objekte & Methoden verwenden" class="alle-img"/>
+
+        <p>Das document-Objekt steht für die gesamte Webseite. Alle Browser implementieren 
+            dieses Objekt. Man kann es verwenden, indem man einfach seinen Namen nennt.
+        </p>
+        <p>
+            Die Methode write() des document-Objekts erlaubt es, neuen Inhalt auf die Seite zu schreiben,
+        </p>
+
 
 
 
