--- a/index.html
+++ b/index.html
@@ -9,10 +9,23 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
-
-
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -346,6 +359,7 @@
         <img src="bilder/datentypen-var.png" alt="Datentypen der Variablen" class="alle-img"/>
 
         <div class="variablen-ändern">
+            <h4>Werte der Variablen ändern</h4>
             <p>Es könnte sein, dass nach einiger Weile die Werte der Attribute geändert werden sollten. Hierfür muss keine 
                 komplizierte Lösung gesucht werden, sondern man kann das Attribut nochmals anschreiben und den neuen Wert 
                 eingeben.<br/>
@@ -359,18 +373,6 @@
     <footer id="footer-titel">
         <a href="www.instagram.com"><img src="bilder/instagram-logo.svg" id="instagram-logo" /></a>
 
-        <div class="kontaktinfos">
-            <h3 id="kontaktinfos-titel">Kontaktinformationen</h3>
-            <div class="kontaktinfos-content">
-                <p>aleks.cvetanovic@bbz-sh.ch</p>
-                <p>076 516 72 11</p>
-                <p>Kirchbergstrasse 48</p>
-                <p>8207 Schaffhausen</p>
-            </div>
-
-
-
-        </div>
 
         <div class="links">
             <h3 id="links-titel"><u>Nützliche externe Webseiten</u></h3>
