--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -356,16 +356,41 @@
 
             </p>
         </div>
-        <img src="bilder/datentypen-var.png" alt="Datentypen der Variablen" class="alle-img"/>
+
+
+        <div class="code-gleich">
+            <p>
+                //NUMMERISCHE DATEN <br/>
+                //---------------------<br/>
+                0.75
+            </p>
+            <p>
+                //STRINGDATEN <br/>
+                //---------------------<br/>
+                &#x22;Hi, Ivy!&#x22;
+                </p>
+                <p>
+                //BOOLESCHE DATEN<br/>
+                //---------------------<br/>
+                true
+            </p>
+        </div>
+        
+        
+        <img src="bilder/datentypen-var.png" alt="Datentypen der Variablen" class="alle-img" />
 
         <div class="variablen-ändern">
             <h4>Werte der Variablen ändern</h4>
-            <p>Es könnte sein, dass nach einiger Weile die Werte der Attribute geändert werden sollten. Hierfür muss keine 
-                komplizierte Lösung gesucht werden, sondern man kann das Attribut nochmals anschreiben und den neuen Wert 
-                eingeben.<br/>
-                Sollte es mehrere Werte schon gehabt haben und man möchte nur z.B. den dritten Wert ändern, muss dies angegeben werden.
+            <p>Es könnte sein, dass nach einiger Weile die Werte der Attribute geändert werden sollten. Hierfür muss
+                keine
+                komplizierte Lösung gesucht werden, sondern man kann das Attribut nochmals anschreiben und den neuen
+                Wert
+                eingeben.<br />
+                Sollte es mehrere Werte schon gehabt haben und man möchte nur z.B. den dritten Wert ändern, muss dies
+                angegeben werden.
             </p>
         </div>
+
 
 
     </main>
