--- a/index.html
+++ b/index.html
@@ -601,7 +601,32 @@
         <hr class="hr-1"/>
         <div class="switch-anweisungen">
             <h4>Switch erstellen</h4>
-            <p></p>
+            <p>Eine switch-Anweisung prüft eine Variable, die als Switch-Wert bezeichnet 
+                wird. Jeder der Fälle gibt einen möglichen Wert für die Variable 
+                sowie den Code an, der ausgeführt werden muss, wenn sie 
+                diesen Wert hat.
+            </p>
+            <div class="code-gleich">
+                switch (level) {<br/>
+                    <br/>
+                    case "One":<br/>
+                    title = "Level 1";<br/>
+                    break;<br/>
+                    <br/>
+                    case "Two":<br/>
+                    title = "Level 2";<br/>
+                    break;<br/>
+                    <br/>
+                    case "Three":<br/>
+                    title = "Level 3";<br/>
+                    break;<br/>
+                    <br/>
+                   default:<br/>
+                    title = "Test";<br/>
+                    break;<br/>
+                    <br/>
+                }
+            </div>
         </div>
 
 
