--- a/index.html
+++ b/index.html
@@ -58,11 +58,8 @@
 
             <img src="bilder/sql-logo.png" id="sql-logo" alt="SQL-Logo" />
         </nav>
-        <div class="search">
-            <input type="search" name="search" placeholder="Suchbegriff eingeben
-        " class="suchbegriff">
-            <input type="submit" value="Suchen" class="suchen">
-        </div>
+        <a href="index-2.html" target="_blank"><button class="dropbtn">Üben</button></a>
+
     </header>
 
     <main>
@@ -1001,15 +998,6 @@
                             <div></div>
                             <br />
                             <br />
-                            <iframe height="265" style="width: 100%;" scrolling="no" title="Iframe interact.js"
-                                src="//codepen.io/tommywang/embed/rVLBbq/?height=265&theme-id=dark&default-tab=js,result"
-                                frameborder="no" allowtransparency="true" allowfullscreen="true">
-                                See the Pen <a href='https://codepen.io/tommywang/pen/rVLBbq/'>Iframe interact.js</a> by
-                                Shiyue Wang
-                                (<a href='https://codepen.io/tommywang'>@tommywang</a>) on <a
-                                    href='https://codepen.io'>CodePen</a>.
-                            </iframe>
-
     </main>
 
 
